# foolstack

./: .dockerignore  .env.buildkit  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
client/: .dockerignore  Caddyfile  Dockerfile  bun.lockb  index.html  package-lock.json  package.json  vite.config.js
client/src/: global.css  main.js  router.js
client/src/apiClient/: client.js  queries.js
client/src/components/ui/: Alert.vue  Avatar.vue  Badge.vue  Button.vue  Card.vue  Checkbox.vue  Dropdown.vue  DropdownItem.vue  FormField.vue  Input.vue  Label.vue  Modal.vue  Progress.vue  Radio.vue  RadioGroup.vue  Select.vue  Spinner.vue  Switch.vue  Textarea.vue  index.js
client/src/composables/: index.js  useTheme.js  useVariants.js
client/src/pages/: HomeView.vue  ShowcasePage.vue
client/src/stores/: auth.js
client/src/styles/: theme.css
docs/: PWA_SETUP.md  README.md  TEMPLATE_USAGE.md  api-reference.md  authentication.md
server/: .dockerignore  Dockerfile  poetry.toml  pyproject.toml  req.txt  requirements.txt
server/core/: celery.py  email.py  exceptions.py  health.py  logging.py  middleware.py  models.py  settings.py  tasks.py  throttling.py  urls.py  utils.py
server/data/: db.sqlite3
server/users/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
server/users/migrations/: 0001_initial.py
